Fix make responsive square for cards in tab in menu

--- a/index.html
+++ b/index.html
@@ -181,67 +181,67 @@
                 <div class="tab-pane fade show active" id="desserts" role="tabpanel" aria-labelledby="desserts-tab">
                     <div class="grid__desserts row row-cols-1 g-3">
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class="cards__card card align-items-center">
                                 <img src="img/menu/desserts/sweet-joy.png" alt="Sweet Joy image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Sweet Joy / <span class="price">$15</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Sweet Joy / <span class="price">$15</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/gentle-cloud.png" alt="Gentle Cloud image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Gentle Cloud / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Gentle Cloud / <span
                                         class="price">$12</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/rose-sparkle.png" alt="Rose Sparkle image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Rose Sparkle / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Rose Sparkle / <span
                                         class="price">$15</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/tropical-day.png" alt="Tropical Day image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Tropical Day / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Tropical Day / <span
                                         class="price">$18</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/hazelnut.png" alt="Hazelnut image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Hazelnut / <span class="price">$12</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Hazelnut / <span class="price">$12</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/berry-mix.png" alt="Berry Mix image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Berry Mix / <span class="price">$13</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Berry Mix / <span class="price">$13</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
-                                <img src="img/menu/desserts/siesta.png" alt="Siesta image" class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Siesta / <span class="price">$15</span></p>
+                            <div class=" cards__card card align-items-center">
+                                <img src="img/menu/desserts/siesta.png" alt="Siesta image" class="card-img">
+                                <p class="card-text fs-4">Siesta / <span class="price">$15</span></p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/desserts/choco-cream.png" alt="Choco Cream image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Choco Cream / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Choco Cream / <span
                                         class="price">$11</span>
                                 </p>
                             </div>
@@ -251,64 +251,64 @@
                 <div class="tab-pane fade" id="ice-cream" role="tabpanel" aria-labelledby="ice-cream-tab">
                     <div class="grid__ice-creams row row-cols-1 g-3">
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/lemon-lime.png" alt="Lemon & Lime image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Lemon & Lime / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Lemon & Lime / <span
                                         class="price">$6</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/blackberry.png" alt="Blackberry image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Blackberry / <span class="price">$7</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Blackberry / <span class="price">$7</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
-                                <img src="img/menu/ice-creams/mango.png" alt="Mango image" class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Mango / <span class="price">$5</span></p>
+                            <div class=" cards__card card align-items-center">
+                                <img src="img/menu/ice-creams/mango.png" alt="Mango image" class="card-img">
+                                <p class="card-text fs-4">Mango / <span class="price">$5</span></p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/lavender.png" alt="Lavender image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Lavender / <span class="price">$8</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Lavender / <span class="price">$8</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/vanilla.png" alt="Vanilla image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Vanilla / <span class="price">$4</span></p>
+                                     class="card-img">
+                                <p class="card-text fs-4">Vanilla / <span class="price">$4</span></p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/chocolate.png" alt="Chocolate image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Chocolate / <span class="price">$5</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Chocolate / <span class="price">$5</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/strawberry.png" alt="Strawberry image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Strawberry / <span class="price">$5</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Strawberry / <span class="price">$5</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/ice-creams/pistachio.png" alt="Pistachio image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Pistachio / <span class="price">$5</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Pistachio / <span class="price">$5</span>
                                 </p>
                             </div>
                         </div>
@@ -317,67 +317,67 @@
                 <div class="tab-pane fade" id="drinks" role="tabpanel" aria-labelledby="drinks-tab">
                     <div class="grid__drinks row row-cols-1 g-3">
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/strawberry.png" alt="Strawberry image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Strawberry / <span class="price">$10</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Strawberry / <span class="price">$10</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
-                                <img src="img/menu/drinks/caramel.png" alt="Caramel image" class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Caramel / <span class="price">$8</span></p>
+                            <div class=" cards__card card align-items-center">
+                                <img src="img/menu/drinks/caramel.png" alt="Caramel image" class="card-img">
+                                <p class="card-text fs-4">Caramel / <span class="price">$8</span></p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/berry-shake.png" alt="Berry Shake image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Berry Shake / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Berry Shake / <span
                                         class="price">$12</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/choco-choco.png" alt="Choco-Choco image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Choco-Choco / <span class="price">$9</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Choco-Choco / <span class="price">$9</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/mango-shake.png" alt="Mango Shake image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Mango Shake / <span class="price">$8</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Mango Shake / <span class="price">$8</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/orange-shake.png" alt="Orange Shake image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Orange Shake / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Orange Shake / <span
                                         class="price">$9</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/banana-shake.png" alt="Banana Shake image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Banana Shake / <span
+                                     class="card-img">
+                                <p class="card-text fs-4">Banana Shake / <span
                                         class="price">$8</span>
                                 </p>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="cards__card card align-items-center py-3 my-2">
+                            <div class=" cards__card card align-items-center">
                                 <img src="img/menu/drinks/ice-latte.png" alt="Ice Latte image"
-                                     class="card-img-top p-4">
-                                <p class="card-text fs-4 fw-bolder py-2">Ice Latte / <span class="price">$10</span>
+                                     class="card-img">
+                                <p class="card-text fs-4">Ice Latte / <span class="price">$10</span>
                                 </p>
                             </div>
                         </div>
