--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="overview-desserts">
                     <h3 class="overview-desserts__text">Desserts</h3>
                     <div class="main-btn">
-                        <a href="#menu" class="main-btn__text"> View Menu</a>
+                        <a href="menu.html" class="main-btn__text"> View Menu</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="milk-shakes">
                     <h3 class="overview-menu__shakes-text">Milk Shakes</h3>
                     <div class="main-btn">
-                        <a href="#menu" class="main-btn__text"> View Menu</a>
+                        <a href="menu.html" class="main-btn__text"> View Menu</a>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="ice-cream">
                     <h3 class="overview-menu__ice-cream-text">Ice Cream</h3>
                     <div class="main-btn">
-                        <a href="#menu" class="main-btn__text"> View Menu</a>
+                        <a href="menu.html" class="main-btn__text"> View Menu</a>
                     </div>
                 </div>
             </div>
@@ -581,16 +581,16 @@
                 <div class="footer__navigation nav">
                     <h3 class="footer__text__title">Navigation</h3>
 
-                    <p><a href="#" class="nav__about-us">About us</a></p>
-                    <p><a href="#" class="nav__menu">Menu</a></p>
-                    <p><a href="#" class="nav__spec">Special</a></p>
-                    <p><a href="#" class="nav__ingredients">Ingredients</a></p>
+                    <p><a href="about-us.html" class="nav__about-us">About us</a></p>
+                    <p><a href="menu.html" class="nav__menu">Menu</a></p>
+                    <p><a href="#special" class="nav__spec">Special</a></p>
+                    <p><a href="#ingredients" class="nav__ingredients">Ingredients</a></p>
                 </div>
             </div>
             <div class="grid-item">
                 <div class="footer__support support">
                     <h3 class="footer__text__title">Help & Support</h3>
-                    <p><a href="#" class="support__blog">Blog</a></p>
+                    <p><a href="#blog" class="support__blog">Blog</a></p>
                     <p><a href="#" class="support__term">Terms & Conditions</a></p>
                     <p><a href="#" class="support__help">Help</a></p>
                     <p><a href="#" class="support__contact">Contacts</a></p>
