debugging footer (html 586 line)

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
                     <p><a href="about-us.html" class="nav__about-us">About us</a></p>
                     <p><a href="menu.html" class="nav__menu">Menu</a></p>
-                    <p><a href="#special" class="nav__spec">Special</a></p>
+                    <p><a href="#" class="nav__spec">Special</a></p>
                     <p><a href="#ingredients" class="nav__ingredients">Ingredients</a></p>
                 </div>
             </div>
