fixed about-us subtitle

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <img class="wave_brand_color" src="img/about-us/about-us-wave.svg" alt="Wave brand color">
         </div>
         <h2 class="about-us__title">About Us</h2>
-        <p class="about-us__sub-title">Our Story</p>
+        <p class="about-us__subtitle">Our Story</p>
         <p class="about-us__text">Our mission is to offer the best experience and the tastiest desserts to our
             clients.</p>
         <p class="about-us__main-text">We are Mr. Snowman, a small yet cozy NY cafe network. We have been
