--- a/about-us.html
+++ b/about-us.html
@@ -1,98 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Page</title>
-    <link rel="shortcut icon" type="image/png" href="img/header/shortcut-icon.png" sizes="96x96">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/about-page.css">
-</head>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="img/header/shortcut-icon.png"
+      sizes="96x96"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/about-page.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Olkhovyk Anastasiia -->
     <header class="header">
-        <nav class="navbar navbar-expand-lg bg-transparent container">
-            <div class="container-fluid">
-                <a class=" a-logo nav-item nav-link navbar-brand d-block d-lg-none" href="index.html">
-                    <div class="header__nav-image">
-                        <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
-                    </div>
-                </a>
-                <div class="navbar-toggler" role="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <div class="animated-icon"><span></span><span></span><span></span><span></span></div>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav w-100 justify-content-between d-lg-flex">
-                        <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="about-us.html">About us</a>
-                            <a class="nav-item nav-link align-self-center" href="menu.html">Menu</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Special</a>
-                        </div>
-                        <a class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
-                            href="index.html">
-                            <div class="header__nav-image">
-                                <img width="129" src="img/header/snowman-logo.svg" alt="Mr. Snowman Logo">
-                            </div>
-                        </a>
-                        <div class="w-100 d-lg-flex justify-content-around">
-                            <a class="nav-item nav-link align-self-center" href="index.html#ingredients">Ingredients</a>
-                            <a class="nav-item nav-link align-self-center" href="index.html#blog">Blog</a>
-                            <a class="nav-item nav-link align-self-center" href="#">Contacts</a>
-                        </div>
-                    </div>
-                </div>
+      <nav class="navbar navbar-expand-lg bg-transparent container">
+        <div class="container-fluid">
+          <a
+            class="a-logo nav-item nav-link navbar-brand d-block d-lg-none"
+            href="index.html"
+          >
+            <div class="header__nav-image">
+              <img
+                width="129"
+                src="img/header/snowman-logo.svg"
+                alt="Mr. Snowman Logo"
+              />
             </div>
-        </nav>
-        <div class="text">
-            <h1 class="text__sub-title">About Us</h1>
+          </a>
+          <div
+            class="navbar-toggler"
+            role="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <div class="animated-icon">
+              <span></span><span></span><span></span><span></span>
+            </div>
+          </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="navbar-nav w-100 justify-content-between d-lg-flex">
+              <div class="w-100 d-lg-flex justify-content-around">
+                <a
+                  class="nav-item nav-link align-self-center"
+                  href="about-us.html"
+                  >About us</a
+                >
+                <a class="nav-item nav-link align-self-center" href="menu.html"
+                  >Menu</a
+                >
+                <a class="nav-item nav-link align-self-center" href="#"
+                  >Special</a
+                >
+              </div>
+              <a
+                class="a-logo nav-item nav-link w-100 d-lg-flex justify-content-center d-none d-lg-block"
+                href="index.html"
+              >
+                <div class="header__nav-image">
+                  <img
+                    width="129"
+                    src="img/header/snowman-logo.svg"
+                    alt="Mr. Snowman Logo"
+                  />
+                </div>
+              </a>
+              <div class="w-100 d-lg-flex justify-content-around">
+                <a
+                  class="nav-item nav-link align-self-center"
+                  href="index.html#ingredients"
+                  >Ingredients</a
+                >
+                <a
+                  class="nav-item nav-link align-self-center"
+                  href="index.html#blog"
+                  >Blog</a
+                >
+                <a class="nav-item nav-link align-self-center" href="#"
+                  >Contacts</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
+      </nav>
+      <div class="text">
+        <h1 class="text__sub-title">About Us</h1>
+      </div>
     </header>
     <main>
-        <!--Mykhailo Popovych-->
-        <section class="staff">
-            <div class="container">
-                <div class="staff__text-block">
-                    <div class="staff__header text">
-                        <h2 class="text__title">Our staff</h2>
-                        <p class="text__sub-title ">Meet Our Team</p>
-                        <p class="text__text">Our staff is our pride. We are happy to welcome new members of
-                            our
-                            family.</p>
-                    </div>
-                    <div class="staff__text">
-                        <p>Our main qualities are respect for customers, cheerfulness, and willingness to work hard to
-                            provide the best service for cafe guests.</p>
-                    </div>
-                    <div class="main-btn">
-                        <a href="#" class="main-btn__text">Send SV</a>
-                    </div>
-                </div>
-                <div class="staff__carousel">
-                    <div class="arrow-btn-prev">
-                        <img src="img/about-us-second-page/arrow-carousel.svg" alt="arrow">
-                    </div>
-                    <div class="staff__carousel__workers workers">
-                    </div>
-                    <div class="arrow-btn-next">
-                        <img src="img/about-us-second-page/arrow-carousel.svg" alt="arrow">
-                    </div>
-                </div>
+      <!--Mykhailo Popovych-->
+      <section class="staff">
+        <div class="container">
+          <div class="staff__text-block">
+            <div class="staff__header text">
+              <h2 class="text__title">Our staff</h2>
+              <p class="text__sub-title">Meet Our Team</p>
+              <p class="text__text">
+                Our staff is our pride. We are happy to welcome new members of
+                our family.
+              </p>
             </div>
-        </section>
+            <div class="staff__text">
+              <p>
+                Our main qualities are respect for customers, cheerfulness, and
+                willingness to work hard to provide the best service for cafe
+                guests.
+              </p>
+            </div>
+            <div class="main-btn">
+              <a href="#" class="main-btn__text">Send SV</a>
+            </div>
+          </div>
+          <div class="staff__carousel">
+            <div class="arrow-btn-prev">
+              <img
+                src="img/about-us-second-page/arrow-carousel.svg"
+                alt="arrow"
+              />
+            </div>
+            <div class="staff__carousel__workers workers"></div>
+            <div class="arrow-btn-next">
+              <img
+                src="img/about-us-second-page/arrow-carousel.svg"
+                alt="arrow"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+    <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/about-us-carousel.js"></script>
     <script src="js/burger-menu.js"></script>
-</body>
-
+  </body>
 </html>
