--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <title>Contacts page</title>
 
 
-    <link rel="stylesheet" href="">
+    <!-- <link rel="stylesheet" href=""> -->
 </head>
 
 <body>
