--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
         </div>
         <div class="tastes__cards">
             <button class="cards__prev-slide">
-                <img class="prev-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg" alt="icon">
+                <img class="prev-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg"
+                     alt="icon">
             </button>
             <div class="cards__carousel"></div>
             <button class="cards__next-slide">
-                <img class="next-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg" alt="icon">
+                <img class="next-slide__arrow-tastes color-arrows-with-size" src="img/tastes/tastes-arrow-right.svg"
+                     alt="icon">
             </button>
         </div>
         <div class="mask-additional-button">
