added header to contacts and started first section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a class="nav-item nav-link align-self-center" href="#blog"
                   >Blog</a
                 >
-                <a class="nav-item nav-link align-self-center" href="#"
+                <a class="nav-item nav-link align-self-center" href="contacts.html"
                   >Contacts</a
                 >
               </div>
