fix id problem in footer

--- a/about-us.html
+++ b/about-us.html
@@ -411,14 +411,14 @@
               <p><a href="menu.html" class="nav__menu">Menu</a></p>
               <p><a href="#" class="nav__spec">Special</a></p>
               <p>
-                <a href="#ingredients" class="nav__ingredients">Ingredients</a>
+                <a href="index.html#ingredients" class="nav__ingredients">Ingredients</a>
               </p>
             </div>
           </div>
           <div class="grid-item">
             <div class="footer__support support">
               <h3 class="footer__text__title">Help & Support</h3>
-              <p><a href="#blog" class="support__blog">Blog</a></p>
+              <p><a href="index.html#blog" class="support__blog">Blog</a></p>
               <p><a href="#" class="support__term">Terms & Conditions</a></p>
               <p><a href="#" class="support__help">Help</a></p>
               <p><a href="#" class="support__contact">Contacts</a></p>
