finished first section in contacts

--- a/contacts.html
+++ b/contacts.html
@@ -111,7 +111,7 @@
                     <div class="contacts__icons">
                         <img class="contact-icon" src="img/contacts/contacts-phone.svg" alt="Phone icon">
                     </div>
-                    <div class="contacts__content-text">
+                    <div class="contacts__phone-text">
                         <p class="contacts__content-title">Phone</p>
                         <p class="contacts__content-text">+1 (234) 567 89 00</p>
                         <p class="contacts__content-text">+1 (234) 567 89 01</p>
